# fridge2table_zero_waste

./: requirements.txt
.devcontainer/: devcontainer.json
fridge2table_zero_waste/: README.md  pyproject.toml  report.md
fridge2table_zero_waste/src/fridge2table_zero_waste/: crew.py  main copy.py  main.py  streamlit_app copy.py  streamlit_app.py
fridge2table_zero_waste/src/fridge2table_zero_waste/config/: agents.yaml  tasks.yaml
fridge2table_zero_waste/src/fridge2table_zero_waste/tools/: custom_tool.py
