[project]
name = "fridge2table_zero_waste"
version = "0.1.0"
description = "fridge2table_zero_waste using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "google-generativeai>=0.3.0",
    "streamlit>=1.28.0",
    "pysqlite3-binary>=0.5.1"
]

[project.scripts]
fridge2table_zero_waste = "fridge2table_zero_waste.main:run"
run_crew = "fridge2table_zero_waste.main:run"
train = "fridge2table_zero_waste.main:train"
replay = "fridge2table_zero_waste.main:replay"
test = "fridge2table_zero_waste.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
